syntax = "proto3";

/*
引用库 同级目录文件 import "XXX.proto"; 
类型proto>>C# 
uint32:uint 
sint32:int   含有负值时效率比int32高
bytes:byte[] 字节数组
集合关键字 repeated
*/

package FGUFW.Core;

message PB_MsgData
{
    int32 PlayerID=1;
    uint32 Cmd=2;
    bytes MsgData=3;
}

message PB_Frame
{
    int32 Index=1;
    int32 PlayerID=2;
    repeated uint32 Cmds=3;
    repeated bytes MsgDatas=4;
}